Fix light-dark handling when using lighting css
Vite 8 includes lightning CSS, which takes a specific approach to handling
the CSS light-dark rule, see https://lightningcss.dev/transpilation.html#light-dark()-color-function

We were missing a color-scheme rule on an ancestor element, leading to some
messed up styles

--- a/assets/app.css
+++ b/assets/app.css
@@ -14,6 +14,15 @@ body {
   border: 0;
   margin: 0;
   background-color: #EDEDED;
+  color-scheme: light dark;
+}
+
+body[data-theme=light] {
+  color-scheme: light;
+}
+
+body[data-theme=dark] {
+  color-scheme: dark;
 }
 
 .icon {
